--- a/simpleUsers/public/css/admin.css
+++ b/simpleUsers/public/css/admin.css
@@ -9,8 +9,6 @@ h2 {
     margin-bottom: 10px;
 }
 
-
-
 #status {
     margin-bottom: 20px;
     font-weight: bold;
@@ -51,22 +49,24 @@ button {
 }
 
 button:hover {
-    background: #1f4fb8;
+    background: #c85f2b;
 }
 
 /* Modal */
 .modal-bg {
     position: fixed;
     top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: rgba(0,0,0,0.5);
-    display: none;
+    width: 100vh; height: 100vh;
+    background: rgba(0,0,0,0.4);
+    display: none; /*hidden by default*/
     justify-content: center;
     align-items: center;
+    z-index: 999;
 }
 
+/*centered modal box*/
 .modal {
-    background: white;
+    background: rgb(255, 255, 255);
     padding: 20px;
     border-radius: 8px;
     width: 300px;
@@ -74,7 +74,7 @@ button:hover {
 }
 
 .modal input {
-    width: 100%;
+    width: 90%;
     padding: 8px;
     margin-top: 8px;
     margin-bottom: 12px;
